[tool.poetry]
name = "weights_and_biases_playground"
version = "0.1.0"
description = ""
authors = ["Tamas Nyiri <nyiritb@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
wandb = ">=0.16"
torch = ">=2.2"
torchvision = ">=0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
